mission section done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>welcome</h1>
+    <section class="main-section">
+        <div class="stay-focused">
+            <h1>Stay Focused on
+            <br><span class="orange-color-text">Mission 2022</span></h1>
+            <p>I am learnig web development.within 6 months I will rock on web developing In-Sha-Allah.It is my mission to do well in this sector. I have also a goal to attain a better job for my family</p>
+            <a class="link-button" href=""> Explore Now </a>
+            <p>Scroll down to explore more about us</p>
+        </div>
+        <div class="profile-pic">
+            <img src="images/person.png" alt="">
+        </div>
+    </section>
+    <h1 class="mission-headline" >My Mission in <span class="orange-color-text">2022</span></h1>
+    <section class="mission-section">
+        
+        <div class="mission-iteams mission-bg">
+            <img class="illustrator" src="images/illustrators/illustrator-1.png" alt="">
+            <h3>Mission</h3>
+            <p>Our mission is to assist our clients in presenting a professional front to the marketplace.Presention is everything and we believe this at UI direct.This is why we offer the array of services that we do </p>
+        </div>
+
+        <div class="mission-iteams vission-bg ">
+            <img class="illustrator" src="images/illustrators/illustrator-1.png" alt="">
+            <h3>Vission</h3>
+            <p>Our mission is to assist our clients in presenting a professional front to the marketplace.Presention is everything and we believe this at UI direct.This is why we offer the array of services that we do </p>
+        </div>
+        <div class="mission-iteams goal-bg ">
+            <img class="illustrator" src="images/illustrators/illustrator-1.png" alt="">
+            <h3>Goal</h3>
+            <p>Our mission is to assist our clients in presenting a professional front to the marketplace.Presention is everything and we believe this at UI direct.This is why we offer the array of services that we do </p>
+        </div>
+    </section>
+    
 </body>
 </html>
