adding bonous part

--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
              <img src="images/project.png" alt="">
          </div>
      </section>
+     <!-- for seeking bonous part -->
+     <div class="contact-part">
+         <h4>
+             Stay In Touch
+         </h4>
+         Email: <input  placeholder="Your email" type="email" name="" id="">
+         <br>
+         Mobile:<input placeholder="your contact number" type="number" name="" id=""> <br>
+         <button class="link-button" type="submit">Subscribe</button>
+     </div>
 
      <!-- fotter section-->
       <footer>
