changing profile pic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>Scroll down to explore more about us</p>
         </div>
         <div class="pic">
-            <img src="images/person.png" alt="">
+            <img src="images/profile.png" alt="">
         </div>
     </section>
     <!-- mission section -->
