--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           >
         </h1>
         <p>
-          I am learnig web development.within 6 months I will rock on web
+          I am learning web development.within 6 months I will rock on web
           developing In-Sha-Allah.It is my mission to do well in this sector. I
           have also a goal to attain a better job for my family
         </p>
